tests/snapshots/run_wpt_conformance__trtx_slicing_float32_0D_constant_tensor_with_empty_starts_and_sizes_should_be_a_no-op.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "slice.https.any.js",
    "slicing float32 0D constant tensor with empty starts and sizes should be a no-op",
    "trtx",
    "PASS",
)
